# Orcinus

./: CMakeLists.txt  config.json
include/: GeometryTypes.h  RadiosityComputation.h  formfactors.h  tesselation.h
shaders/: AddColumnInterReflection.comp  AddRowInterReflection.comp  AddToMatrix.comp  ComputeDoubleReflection.comp  ComputeTripleReflection.comp  Depth.frag  Depth.vert  QuadRender.frag  QuadRender.vert  Radiosity.frag  Radiosity.vert  RemoveOldValues.comp  SSAO.frag  Skeleton.frag  Skeleton.vert  SumMatrices.comp  Surface.frag  Surface.vert  UpdateLighting.comp
src/: RadiosityComputation.cpp  formfactors.cpp  main.cpp  tesselation.cpp
